# aibolit-care-api

./: .env.dev  .env.example  .pre-commit-config.yaml  CNAME  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml
alembic/: env.py
alembic/versions/: 16ff3bded631_initial_migrate.py  1b143abe90e5_initial_migrate.py  eab07fd18c77_initial_migrate.py
docs/: CNAME
docs/openapi/: openapi.json  openapi.yaml
docs/scripts/: convert_script.py  openapi.json  openapi.yaml
docs/swagger-ui/: openapi.json  swagger-initializer.js
grpc_server/: grpc_client.py  grpc_main.py  grpc_service.py  medications.proto  medications_pb2.py  medications_pb2_grpc.py  users_pb2.py  users_pb2_grpc.py
openapi/: openapi.yaml
src/: config.py  database.py  main.py
src/aibolit/: config.py  database.py  dependencies.py  main.py
src/aibolit/core/: config.py  database.py  dependencies.py  exceptions.py  logger.py  middleware.py
src/aibolit/grpc/: grpc_client.py
src/aibolit/grpc_service/: grpc_client.py  grpc_main.py  grpc_service.py  main.py
src/aibolit/integrations/: schedules_repo.py  users_repo.py
src/schedules/: models.py  router.py  schemas.py  service.py  utils.py
src/users/: models.py  router.py  schemas.py  service.py
tests/: conftest.py
tests/grpc/: test_schedules_adapters.py  test_schedules_servicers.py  test_users_adapters.py
tests/grpc_service/: test_grpc_service.py
tests/schedules/: test_schedules_router.py  test_schedules_utils.py  test_services_utils.py  test_views.py
tests/users/: test_users_router.py  test_views.py
(+50 files in other folders)
