[project]
name = "doctor-aibolit-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.115.12",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "alembic>=1.15.2",
    "asyncio>=3.4.3",
    "black>=25.1.0",
    "datamodel-code-generator>=0.30.0",
    "debugpy>=1.8.14",
    "freezegun>=1.5.1",
    "greenlet>=3.2.1",
    "httpx>=0.28.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "requests>=2.32.3",
    "ruff>=0.11.7",
]

[project.urls]
Repository = "https://github.com/507015T/medication-schedules-api"

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | \.vscode
  | \.idea
  | \alembic
)
'''

[tool.ruff]
target-version = "py38"
line-length = 120
exclude = [
  ".venv", "alembic"
]
lint.ignore = [
  "F821", # Too many arguments to function call
]
lint.flake8-tidy-imports.ban-relative-imports = "all"
lint.mccabe.max-complexity = 20
